@@ -21,8 +21,6 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  *
  * $Id$
- *
- * Checked for jEdit 4.0 API
  */
 
 
@@ -43,7 +41,10 @@ void insertTag()
 		textArea.setCaretPosition(caret + tag.length() + 2);
 }
 
-insertTag();
+if(buffer.isReadOnly())
+	Macros.error(view, "Buffer is read-only.");
+else
+	insertTag();
 
 /*
 	Macro index data (in DocBook format)
